# rust

./: Cargo.toml
.github/workflows/: rust.yml
closures/: Cargo.toml
closures/src/: main.rs
enums/: Cargo.toml
enums/src/: main.rs
error/: Cargo.toml
error/src/: err.rs  main.rs
functional/functions/: Cargo.toml
functional/functions/src/: main.rs
functional/map/: Cargo.toml
functional/map/src/: main.rs
generics/: Cargo.toml
generics/src/: main.rs
hash-maps/src/: main.rs
hw/: Cargo.toml
largest-number/: Cargo.toml
largest-number/src/: main.rs
lib-structure/: Cargo.toml
lib-structure/src/: lib.rs  lib_only_one_file.rs
lib-structure/src/network/: mod.rs
lifetimes/: Cargo.toml
lifetimes/src/: main.rs
match/: Cargo.toml
match/src/: main.rs
operators/: Cargo.toml
operators/src/: main.rs
options/: Cargo.toml
options/src/: main.rs
panic/: Cargo.toml
panic/src/: main.rs
public-private/: Cargo.toml
public-private/src/: lib.rs
rectangles/: Cargo.toml
rectangles/src/: main.rs
smart-pointers/box/: Cargo.toml
smart-pointers/box/src/: main.rs
smart-pointers/cell/: Cargo.toml
smart-pointers/cell/src/: main.rs
smart-pointers/rc/: Cargo.toml
smart-pointers/rc/src/: main.rs
std-data-structures/hash-maps/: Cargo.toml
std-data-structures/strings/: Cargo.toml
std-data-structures/vector/: Cargo.toml
strings/src/: main.rs
threads/: Cargo.toml
threads/src/: main.rs
traits/: Cargo.toml
traits/src/: main.rs  trait_objects.rs
unsafe/: Cargo.toml
unsafe/src/: main.rs
vector/src/: main.rs
(+3 files in other folders)
