[workspace]
members=[
    "hw",
    "match",
    "lib-structure",
    "enums",
    "generics",
    "largest-number",
    "lifetimes",
    "options",
    "panic",
    "public-private",
    "rectangles",
    "traits",
    "std-data-structures/hash-maps",
    "std-data-structures/vector",
    "std-data-structures/strings",
    "closures",
]