[workspace]
members=[
    "hw",
    "match",
    "lib-structure",
    "enums",
    "generics",
    "largest-number",
    "lifetimes",
    "options",
    "error",
    "public-private",
    "rectangles",
    "traits",
    "std-data-structures/hash-maps",
    "std-data-structures/vector",
    "std-data-structures/strings",
    "closures",
    "operators",
    "smart-pointers/box",
    "smart-pointers/cell",
    "smart-pointers/rc",
    "unsafe",
    "functional/functions",
    "functional/map",
]